<resources>
    <string name="app_name">AppLista</string>
    <string name="txt_titulo">Inscrição para Cursos</string>
    <string name="text_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="text_hint_edit_nome_do_curso">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_app_Lista">Lista de Responsável</string>
    <string name="txt_selecione_um_curso">Selecione um curso...</string>
</resources>
