<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/editNomedoAluno"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/text_hint_edit_nome_do_aluno"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSobrenome" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/text_hint_edit_primeiro_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome" />

    <EditText
        android:id="@+id/editTelefonedeContato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_de_contato"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomedoAluno" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="80dp"
        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefonedeContato"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="80dp"
        android:text="@string/txt_button_salvar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintTop_toBottomOf="@+id/editTelefonedeContato"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="388dp"
        android:layout_marginBottom="120dp"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefonedeContato"
        app:layout_constraintVertical_bias="0.48" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_app_Lista"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>